--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,12 @@
 pipeline {
     agent any
     stages {
+        stage('Check Maven Installation') {
+            steps {
+                sh 'echo $PATH'
+                sh 'which mvn'
+            }
+        }
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
