--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,6 +7,11 @@ pipeline {
                 sh 'which mvn'
             }
         }
+        stage('Welcome') {
+            steps {
+                echo 'welcome to this pipeline'
+            }
+        }
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
